<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppQuest Grössen Messer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_calculate">CalculateActivity</string>
    <string name="symbol_alpha">α</string>
    <string name="symbol_beta">β</string>
    <string name="no_value">no_value</string>
    <string name="calculate">calculate</string>
    <string name="calculate_etc">calculate...</string>
    <string name="height">height</string>
    <string name="distance">distance</string>
    <string name="entity_symbol_metre">m</string>
    <string name="groessenmesser_png_content_description">Shows a schema of of the situation where the height and distance will be calculated</string>

</resources>
