<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.fenceposts.appquest.groessenmesser.MainActivity" >

    <SurfaceView
        android:id="@+id/surfaceViewCameraPreview"
        android:layout_width="333dp"
        android:layout_height="250dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />

    <RadioGroup
        android:id="@+id/radioButtonGroupAngles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/surfaceViewCameraPreview"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/surfaceViewCameraPreview" >

        <RadioButton
            android:id="@+id/radioButtonAngleAlpha"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:checked="true"
            android:text="@string/symbol_alpha"
            android:textSize="@dimen/activity_measures_size" />

        <RadioButton
            android:id="@+id/radioButtonAngleBeta"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/symbol_beta"
            android:textSize="@dimen/activity_measures_size" />

    </RadioGroup>

   <ch.fenceposts.appquest.groessenmesser.view.CanvasGreenLineView
        android:id="@+id/viewCustomView"
        android:layout_width="333dp"
        android:layout_height="250dp"
        android:layout_alignLeft="@+id/surfaceViewCameraPreview"
        android:layout_alignTop="@+id/surfaceViewCameraPreview" />

    <TextView
        android:id="@+id/textViewAngleValueAlpha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="12dp"
        android:layout_toRightOf="@+id/surfaceViewCameraPreview"
        android:text="@string/no_value"
        android:textSize="@dimen/activity_measures_size" />

    <TextView
        android:id="@+id/textViewAngleValueBeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewAngleValueAlpha"
        android:layout_below="@+id/textViewAngleValueAlpha"
        android:layout_marginTop="25dp"
        android:text="@string/no_value"
        android:textSize="@dimen/activity_measures_size" />

    <Button
        android:id="@+id/buttonGotoCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textViewAngleValueBeta"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="40dp"
        android:layout_toRightOf="@+id/surfaceViewCameraPreview"
        android:onClick="gotoCalculate"
        android:text="@string/calculate_etc" />

</RelativeLayout>